[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "bots"
author = "PyRVA"
home-page = "http://pyrva.org"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "README.md"
requires=[
    "python-dotenv>=0.15.0",
    "discord.py>=1.6.0",
    "tweepy>=3.10.0",
    "typer>=0.3.2",
]

[tool.flit.metadata.requires-extra]
test = [
    "pytest>=6.2.2",
    "pytest-cov>=2.11.1",
]
